[package]
name = "bf2s"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/bf2s"
description = "A simple Brainfuck interpreter that executes code from a string and returns the output as a string."
keywords = ["brainfuck", "interpreter", "esolang", "parser", "string-output"]
categories = ["command-line-utilities", "parsing", "text-processing"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[profile.release]
lto = true
codegen-units = 1